--- a/.project
+++ b/.project
@@ -14,4 +14,33 @@
 	<natures>
 		<nature>org.python.pydev.pythonNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1375884015187</id>
+			<name></name>
+			<type>21</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.py</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1375884015219</id>
+			<name></name>
+			<type>21</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.rst</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1375884015219</id>
+			<name></name>
+			<type>21</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.sh</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
