--- a/.project
+++ b/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1375884015187</id>
+			<id>1380889632161</id>
 			<name></name>
 			<type>21</type>
 			<matcher>
@@ -25,7 +25,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1375884015219</id>
+			<id>1380889632165</id>
 			<name></name>
 			<type>21</type>
 			<matcher>
@@ -34,12 +34,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1375884015219</id>
+			<id>1380889632169</id>
 			<name></name>
 			<type>21</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-*.sh</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1380889632173</id>
+			<name></name>
+			<type>21</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.pyc</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
